# bballsim

./: 21900151.csv  Dallas MavericksvsMiami Heat.csv  Phoenix SunsvsGolden State Warriors.csv  box.csv  box1.csv  box10.csv  box2.csv  box3.csv  box4.csv  box5.csv  box6.csv  box7.csv  box8.csv  box9.csv  box{i}.csv  darko.json  darko_daily.csv  gamesim.py  m.csv  main.py  master.csv  possessionLengths.csv  test.txt
app/bballsim-tauri/src-tauri/: Cargo.toml  build.rs  cap_sheet.csv  darko.json  f.json  foo.txt  iso.csv  master.csv  master_cap.csv  master_cap.json  pnr.csv  tauri.conf.json  test.txt  transition.csv
app/bballsim-tauri/src-tauri/src/: cap.rs  main.rs  playtype_data.rs
box_scores/: Boston Celtics vs Boston Celtics.csv  Boston Celtics vs Dallas Mavericks.csv  Boston Celtics vs Golden State Warriors.csv  Boston Celtics vs Memphis Grizzlies.csv  Boston Celtics vs Miami Heat.csv  Boston Celtics vs Milwaukee Bucks.csv  Boston Celtics vs Phoenix Suns.csv  Boston Celtics vs Utah Jazz.csv  Dallas Mavericks vs Boston Celtics.csv  Dallas Mavericks vs Dallas Mavericks.csv  Dallas Mavericks vs Golden State Warriors.csv  Dallas Mavericks vs Memphis Grizzlies.csv  Dallas Mavericks vs Miami Heat.csv  Dallas Mavericks vs Milwaukee Bucks.csv  Dallas Mavericks vs Phoenix Suns.csv  Dallas Mavericks vs Utah Jazz.csv  Golden State Warriors vs Boston Celtics.csv  Golden State Warriors vs Dallas Mavericks.csv  Golden State Warriors vs Golden State Warriors.csv  Golden State Warriors vs Memphis Grizzlies.csv  Golden State Warriors vs Miami Heat.csv  Miami Heat vs Miami Heat.csv  (+42 more)
(+15 files in other folders)
