[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.10", features = [] }
tauri_includedir = "0.6.1"
static-files = "0.2.3"



[dependencies]
resolve-path ="0.1.0"
actix-web = "4.0"
actix-web-static-files = "4.0"
static-files = "0.2.3"
tauri-bundler = "1.0.3"
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
rusty-money = "0.4.1"
csv = "1.1.6"
serde_json = "1.0"
tauri_includedir_codegen = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.12", features = ["api-all", "devtools"] }
rand = "0.8.5"
weighted_rand = "0.3"
priority-queue = "1.2.2"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
